pretty nice looking recipe template

--- a/forkpress/recipes/templates/recipes/base.html
+++ b/forkpress/recipes/templates/recipes/base.html
@@ -10,8 +10,9 @@
     <meta name="description" content="Forkpress base html">
     <meta name="author" content="forkpress">
 
-    <link href="static/recipes/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/recipes/css/style.css" rel="stylesheet">
+    <link href="/static/recipes/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/recipes/css/style.css" rel="stylesheet">
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" >
 
   </head>
   <body>
@@ -88,8 +89,8 @@
 	{% endblock %}
 </div>
 
-    <script src="static/recipes/js/jquery.min.js"></script>
-    <script src="static/recipes/js/bootstrap.min.js"></script>
-    <script src="static/recipes/js/scripts.js"></script>
+    <script src="/static/recipes/js/jquery.min.js"></script>
+    <script src="/static/recipes/js/bootstrap.min.js"></script>
+    <script src="/static/recipes/js/scripts.js"></script>
   </body>
 </html>
