--- a/forkpress/recipes/templates/recipes/index.html
+++ b/forkpress/recipes/templates/recipes/index.html
@@ -1,61 +1,23 @@
 {% extends "recipes/base.html" %}
 
-{% block title %}Create a Recipe | forkpress{% endblock %}
+{% block title %}Recipes | forkpress{% endblock %}
 
 {% block content %}
+
 <div class="row">
-	<div class="col-md-12">
-		<h2>
-			Heading
-		</h2>
-		<p>
-			Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-		</p>
-		<p>
-			<a class="btn" href="#">View details »</a>
-		</p>
-	</div>
+    <div class="col-md-12" align="center">
+        <h2>
+            Create a Recipe
+        </h2>
+        <p>
+            Build a recipe by adding steps one-by-one.
+        </p>
+    </div>
+    <div class="col-sm-12" align="center">                         
+        <button type="submit" class="btn btn-default">
+            Add a new Recipe
+        </button>
+    </div>
 </div>
-<div class="row">
-	<div class="col-md-12">
-		<form class="form-horizontal" role="form">
-			<div class="form-group">
-				 
-				<label for="inputEmail3" class="col-sm-2 control-label">
-					Email
-				</label>
-				<div class="col-sm-10">
-					<input type="email" class="form-control" id="inputEmail3">
-				</div>
-			</div>
-			<div class="form-group">
-				 
-				<label for="inputPassword3" class="col-sm-2 control-label">
-					Password
-				</label>
-				<div class="col-sm-10">
-					<input type="password" class="form-control" id="inputPassword3">
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					<div class="checkbox">
-						 
-						<label>
-							<input type="checkbox"> Remember me
-						</label>
-					</div>
-				</div>
-			</div>
-			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					 
-					<button type="submit" class="btn btn-default">
-						Sign in
-					</button>
-				</div>
-			</div>
-		</form>
-	</div>
-</div>
+
 {% endblock %}
